--- a/js-examples/autofacet.html
+++ b/js-examples/autofacet.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-		<title>Highlighting Search Demo</title>
+		<title>Facet Based AutoComplete Search Demo</title>
 		<link href="http://cdn22.7static.com/s/corecss/1129665605/" rel="stylesheet" />
 		<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
 		<script type="text/javascript" src="js/jquery-ui-1.8.19.custom.min.js"></script>
@@ -29,7 +29,7 @@
 								facet: true,
 								"facet.mincount":20,
 								"facet.sort":"count",
-		                        rows: 0								
+		                        rows: 0		                        								
 		                    },
 		                    accept: "application/json; charset=utf-8",
 		                    contentType: "application/json; charset=utf-8",
