--- a/js-examples/highlighting.html
+++ b/js-examples/highlighting.html
@@ -8,6 +8,7 @@
 		<script type="text/javascript" src="js/jquery-ui-1.8.19.custom.min.js"></script>
 		<style>
 			em { font-weight:bold; background-color:yellow;}
+			div#numResults {float:right}
 		</style>
 		<script type="text/javascript">
 		    $(function () {
@@ -24,12 +25,14 @@
 								"hl.fl":"text",
 								"hl.fragmenter":"regex",
 								"hl.formatter":"html",
-		                        rows: 10
+		                        rows: 10,
+		                        qt: "dismax",
+		                        mm: 0,
 		                    },
 		                    accept: "application/json; charset=utf-8",
 		                    contentType: "application/json; charset=utf-8",
 		                    success: function (data) {
-										                        
+								$("#numResults").html(data.response.numFound);
 								response($.map(data.response.docs, function (doc) {
 		                            return {
 										id: doc.id,
@@ -96,6 +99,7 @@
 		</style>
 	</head>
 	<body>
+		<div id="numResults"></div>
 		<div style="width:500px">
 			<div class="ui-widget">
 				<input id="row" class="focus-text" type="search"/>
